--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,41 +9,47 @@
     <script type="text/javascript" src="js/main.js"></script>
     <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
 </head>
+
 <body>
     <nav class="navbar navbar-dark bg-primary">
         <a class="navbar-brand text-white" href="">Consultar Cep</a>
         <div class="form-inline">
-          <input class="form-control mr-sm-2" type="search" placeholder="CEP" id="cep">
-          <button class="btn btn-outline-light my-2 my-sm-0" onclick="consultarCep()">Buscar</button>
+            <input class="form-control mr-sm-2" type="search" placeholder="CEP" id="cep">
+            <button class="btn btn-outline-light my-2 my-sm-0" onclick="consultarCep()">Buscar</button>
         </div>
-      </nav>
-      <div>
-          <div class="container" style="margin-top: 20px;"> 
-              <h3 class="row" id="titulo_cep">CEP</h3>
-          </div>
-          <div  style="margin-top: 20px;">
+    </nav>
+    <div class="container barra_progresso" style="margin-top: 80px;">
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75"
+                aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
+        </div>
+    </div>
+    <div class="container cep" style="margin-top: 20px;">
+        <h3 class="row" id="titulo_cep">CEP</h3>
+        <div class="row" style="margin-top: 20px;">
             <table class="table">
                 <tbody>
-                    <tr scope="row">
+                    <tr >
                         <td>Logradouro</td>
                         <td id="logradouro"></td>
                     </tr>
-                    <tr scope="row">
+                    <tr >
                         <td>Bairro</td>
                         <td id="bairro"></td>
                     </tr>
-                    <tr scope="row">
+                    <tr >
                         <td>Localidade</td>
                         <td id="localidade"></td>
                     </tr>
-                    <tr scope="row">
+                    <tr >
                         <td>UF</td>
                         <td id="uf"></td>
                     </tr>
                 </tbody>
             </table>
-          </div>
-      </div>
-   
+        </div>
+    </div>
+
 </body>
+
 </html>
